# mnist-complete

./: README.md  mnist_digit_classification.ipynb  pyproject.toml
